added new css and acf

--- a/web/wp-content/themes/rankexperts/assets/all-services.html
+++ b/web/wp-content/themes/rankexperts/assets/all-services.html
@@ -7,7 +7,7 @@
   <title>All services</title>
   <link rel="icon" href="favicon.ico" />
   <link href="css/global.css" rel="stylesheet" />
-  <link href="css/all-servisec.css" rel="stylesheet" />
+  <link href="css/all-services.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -582,7 +582,7 @@
                       </svg></a>
                   </div>
                 </article>
-                <article class="card-item">
+                <article class="card-item card-item--mod">
                   <div class="card-item__inner">
                     <div class="card-item__top">
                       <div class="card-item__img">
